  pinpoint with abbrev. at start of section string.

- Insulate changes to item.locator and item.label from copy
  held by calling application.

- Recognized pp. as equivalent to p. when parsing locator
  abbrev. labels.

- Introduce a new "gazette" type for official gazettes
  published by government, which contain amending acts and
  legislation prior to codification.


==========================
Changes in version 1.0.319
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Recognize an explicitly defined page-range-delimiter term.

==========================
Changes in version 1.0.318
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Enable code from previous checkin on makeCitationCluster()
  as well as processCitationCluster()

==========================
Changes in version 1.0.317
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Add the ability to extend the static statute locator
  through the normal item.locator to the 1.0.316 version
  checkin.

==========================
Changes in version 1.0.316
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Introduce new logic for bill and legislation items, controlled
  by the following toggle:

     citeproc.development_extensions.atomic_statutes = true;

  By default, this toggle is currently set to false, which disables
  the new behavior.

  If the toggle is set to true, locator terms in the CSL section field
  on bill and legislation items are rendered with locators parsed out
  of the field using the abbreviation conventions here (with the
  abbrev followed by a period in the field):
